--- a/introdução a html/index.html
+++ b/introdução a html/index.html
@@ -18,9 +18,9 @@
         <article>
             <header>
                 <h3 class="post title">Posts #1</h3>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTBW2_3Np8WENjr_OhRZ4U1CniUmCKv4lFRQ&usqp=CAU" width="600px" height="350px">
+                <img src="https://cdn.motor1.com/images/mgl/WpjRL/s1/2021-ford-f-150.jpg" width="600px" height="350px">
             </header> 
-            <p>Lorem ipsum dolor sit amet, <a href="https://translate.google.com/?sl=auto&tl=pt&op=translate" 
+            <p class="post_content">Lorem ipsum dolor sit amet, <a href="https://translate.google.com/?sl=auto&tl=pt&op=translate" 
                 target="_blank">consectetur adipiscing elit</a>. 
                 diam. Suspendisse sed felis eget orci fringilla tincidunt et ac purus. Donec eget porta magna, quis suscipit est. Duis sollicitudin nulla ac arcu tincidunt euismod. Vestibulum ut nunc rutrum ante finibus iaculis. Nullam sit amet urna eleifend, auctor ante id, fermentum libero. Maecenas sed velit ultrices, suscipit felis sed, sodales diam. Pellentesque est purus, vulputate at porttitor nec, porta sed lectus.</p>
         </article>
